app-repos/headscale/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    kubernetes.io/metadata.name: headscale
